# tiramisu-brulee

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  mypy.ini  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: python-app.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  tiramisu_brulee.experiment.cli.rst  tiramisu_brulee.experiment.lesion_seg.rst  tiramisu_brulee.experiment.rst  tiramisu_brulee.model.rst  tiramisu_brulee.rst  usage.rst
tests/: __init__.py  _test_configs.py  _test_lightningtiramisu.py  test_lesion_seg.py  test_tiramisu2d.py  test_tiramisu3d.py
tiramisu_brulee/: __init__.py  data.py  loss.py  util.py
tiramisu_brulee/experiment/: __init__.py  cli.py  data.py  default_configs.py  lesion_tools.py  lightningtiramisu.py  parse.py  seg.py  type.py  util.py
tiramisu_brulee/experiment/cli/: __init__.py  common.py  predict.py  to_onnx.py  train.py
tiramisu_brulee/experiment/lesion_seg/: __init__.py  cli.py  data.py  lesion_tools.py  parse.py  seg.py  util.py
tiramisu_brulee/experiment/msseg/: lesion_tools.py  msseg.py  parser.py  util.py
tiramisu_brulee/model/: __init__.py  attention.py  dense.py  tiramisu.py
