[bumpversion]
current_version = 0.1.33
commit = True
tag = True

[bumpversion:file:tiramisu_brulee/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
per-file-ignores = 
	__init__.py: F401
max-line-length = 88
extend-ignore = E203

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
name = tiramisu-brulee
version = attr: tiramisu_brulee.__version__
description = A 2D and 3D PyTorch implementation of the Tiramisu CNN
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords = tiramisu, segmentation, neural network, convolutional, pytorch
license = Apache Software License 2.0
license_file = LICENSE
url = https://github.com/jcreinhold/tiramisu-brulee
project_urls = 
	Bug Tracker = https://github.com/jcreinhold/tiramisu-brulee/issues
	Documentation = https://tiramisu-brulee.readthedocs.io/
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires = 
	torch
setup_requires = 
	pytest-runner
test_suite = tests
tests_require = 
	jsonargparse~=3.19.4
	numpy
	pandas
	pytest>=3
	pytorch-lightning~=1.5.1
	PyYAML
	ruyaml
	scikit-image
	scipy
	SimpleITK~=2.1.0
	torchio
	torchmetrics

[options.packages.find]
include = 
	tiramisu_brulee
	tiramisu_brulee.*
exclude = 
	tests
	docs

[options.extras_require]
lesionseg = 
	jsonargparse~=3.12.0
	numpy
	pandas
	pytorch-lightning~=1.5.1
	PyYAML
	ruyaml
	scikit-image
	scipy
	SimpleITK~=2.1.0
	torchio
	torchmetrics
mlflow = mlflow

[options.entry_points]
console_scripts = 
	lesion-train = tiramisu_brulee.experiment.cli.train:train
	lesion-predict = tiramisu_brulee.experiment.cli.predict:predict
	lesion-predict-image = tiramisu_brulee.experiment.cli.predict:predict_image
